--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,33 @@
 
+.menu-container{
+    position: absolute;
+    top: 10%;
+    right: 0;
+    left: 0;
+    width: 319px;
+    display: table;
+    margin: 0 auto;
+    transform: translateY(-50%);
+    z-index: 100;
+}
+
+
 .menu-bar {
-        z-index: 100;
-        position: absolute;
-        border-radius: 25px;
-        height: fit-content;
-        display: inline-flex;
+        position: relative;
+        width: 33.333%;
+        display: table-cell;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 500px;
+        text-align: center;
         background-color: rgba(0, 0, 0, .4);
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);  
-        align-items: center;
-        padding: 0 10px;
-        margin: 50px 0 0 0;
         li {
             list-style: none;
+            display: inline;
             color: white;
             font-family: sans-serif;
             font-weight: bold;
