--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,87 @@
 
+$separator-size: 5px;
+$separator-border-style: solid;
+$separator-border-color: #2e8327;
+$separator-space-top: 50px;
+$separator-space-bottom: 50px;
+
+.separator {
+  margin-top: $separator-space-top;
+  margin-bottom: $separator-space-bottom;
+  border: 0;
+}
+
+.separator--line {
+  border: 0;
+  border-bottom: $separator-size $separator-border-style $separator-border-color;
+
+  width: 0;
+  animation: separator-width 1s ease-out forwards;
+}
+@keyframes separator-width {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@mixin dot {
+  $dot-size: 7px;
+  content: "";
+  background-color: $separator-border-color;
+  display: block;
+  height: $dot-size;
+  width: $dot-size;
+  border-radius: 50%;
+}
+.separator--dots {
+  overflow: visible;
+  border: 0;
+  @include dot();
+  position: relative;
+  &:before {
+     @include dot();
+     position: absolute;
+     left: -32px;
+     animation: dot-move-left 1s ease-out forwards;
+  }
+    &:after {
+     @include dot();
+     position: absolute;
+     left: 32px;
+     animation: dot-move-right 1s ease-out forwards;
+  }
+}
+
+@keyframes dot-move-right {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: 32px;
+  }
+}
+@keyframes dot-move-left {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: -32px;
+  }
+}
+
+
+.separator--dotter {
+  border: 0;
+  border-bottom: $separator-size dotted $separator-border-color;
+
+  width: 0;
+  animation: separator-width 1.5s ease-out forwards;
+}
+
+
 .menu-container{
     position: absolute;
     top: 10%;
@@ -189,4 +272,132 @@ $font-01: "Verdana", sans-serif;
       }
    }
 }
-    
+
+
+.col-lg-4 .btn-primary,
+.totals .btn-primary {
+   position: relative;
+   display: inline-block;
+   cursor: pointer;
+   outline: none;
+   border: 0;
+   vertical-align: middle;
+   text-decoration: none;
+   font-size: inherit;
+   font-family: inherit;
+   &.learn-more {
+     font-weight: 600;
+     color: white;
+     text-transform: uppercase;
+     padding: 1em 1.5em;
+     background: rgb(93, 190, 63);
+     border: 2px solid rgb(42, 92, 46);
+     border-radius: 0.75em;
+     transform-style: preserve-3d;
+     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+     &::before {
+       position: absolute;
+       content: '';
+       width: 100%;
+       height: 100%;
+       top: 0;
+       left: 0;
+       right: 0;
+       bottom: 0;
+       background: darkgreen;
+       border-radius: inherit;
+       box-shadow: 0 0 0 2px rgb(42, 92, 46), 0 0.625em 0 0  #d9f7cd;
+       transform: translate3d(0, 0.75em, -1em);
+       transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+     }
+     &:hover {
+       background: green;
+       transform: translate(0, 0.25em);
+       &::before {
+         box-shadow: 0 0 0 2px rgb(42, 92, 46), 0 0.5em 0 0 #d9f7cd;
+         transform: translate3d(0, 0.5em, -1em);
+       }
+     }
+     &:active {
+       background: green;
+       transform: translate(0em, 0.75em);
+       &::before {
+         box-shadow: 0 0 0 2px rgb(42, 92, 46), 0 0 #d9f7cd;
+         transform: translate3d(0, 0, -1em);
+       }
+     }
+   }
+ }
+
+
+
+ .quote-container {
+
+   margin-top: 5%;
+   align-items: center;
+   text-align: center;
+
+
+ }
+
+
+ blockquote {
+   position: relative;
+   display: inline-block;
+   background: #eee;
+   padding: 40px 30px 30px 60px;
+   border-radius: 10px;
+   color: #333;
+   text-align: left;
+   
+   box-shadow: 1px 1px 1px #999,
+               2px 2px 1px #999,
+               3px 3px 1px #999;
+   transition-duration: .3s;
+   
+   span.author {
+     position: relative;
+     display: block;
+     text-align: right;
+     margin-top: 5px;
+     color: #999;
+     
+     i {
+       position: relative;
+       background: #eee;
+       padding-left: 10px;
+       font-style: italic;
+       z-index: 5;
+     }
+     
+     &::before {
+       display: block;
+       content: "";
+       position: absolute;
+       top: 50%;
+       left: 0;
+       width: 100%;
+       height: 1px;
+       background: #ccc;
+       z-index: 1;
+     }
+   }
+   
+   &:hover {
+     box-shadow: 1px 1px 5px #999,
+                 2px 2px 6px #999,
+                 3px 3px 7px #999;
+   }
+   
+   &::before {
+     display: block;
+     position: absolute;
+     top: 10px;
+     left: 10px;
+     content: "\"";
+     font-family: 'Bitter', serif;
+     font-size: 120px;
+     color: #999
+   }
+ }
+
