Nav, Product Card, Colors, Code Cleanup

--- a/src/css/AboutUs.scss
+++ b/src/css/AboutUs.scss
@@ -1,4 +1,8 @@
+$primary-color: rgb(73, 180, 207);
+$secondary-color: rgb(0, 60, 255);
 
+$bg-color-1: white;
+$bg-color-2:#def9ff;
 :root {
   --color: #3c3163;
   --transition-time: 0.5s;
