--- a/src/css/Store.scss
+++ b/src/css/Store.scss
@@ -1,294 +1,185 @@
+$primary-color: rgb(73, 180, 207);
+$secondary-color: rgb(0, 60, 255);
 
-.slide-title{
-    z-index: 100;
-    text-align: center;
-    align-items: center;
-    transform: translate(0, -50%);
-}
+$bg-color-1: white;
+$bg-color-2:#def9ff;
 
-
-.wrapper {
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
+.product-wrapper{
+  width: 300px;
+  height: 500px;
+  background: white;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0;
+  transform: scale(0.95);
+  transition: box-shadow 0.5s, transform 0.5s;
+  &:hover{
+    transform: scale(1);
+    box-shadow: 5px 20px 30px rgba(0,0,0,0.2);
   }
   
-  .slideshow {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    transform: translateX(-50%);
-  
-    &--hero {
-      z-index: 3;
-      left: 0;
-      top: 50%;
-      // width: 100%;
-      height: 85%;
-      transform: translateY(-50%) skewY(-10deg);
-      transform-origin: center;
-      overflow: hidden;
-      box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
-  
-      .slides {
-        position: absolute;
-        left: 0;
-        top: -10%;
-        width: 100vw;
-        height: 100vh;
-        animation: 11s slideshow-hero-mobile -3s infinite;
-      }
-  
-      .slide1 {
-        background-image: url(https://www.rei.com/dam/vagnini_181016_2024_hiking_beginners_hero_lg.jpg);
-        animation: 20s slides-set-1 -0.1s infinite;
-      }
-      .slide2 {
-        background-image: url(https://acchamber.com/wp-content/uploads/2020/05/construction-laws.jpg);
-        animation: 20s slides-set-2 -0.1s infinite;
-      }
-      .slide3 {
-        background-image: url(https://beginwithinscottsdale.com/wp-content/uploads/2020/04/Natural-Methods-for-Neck-and-Shoulder-Pain-Relief.jpg);
-        animation: 20s slides-set-3 -0.1s infinite;
-      }
-  
-      @media (min-width: 600px) {
-        left: 50%;
-        top: 0;
-        width: 67%;
-        height: 100%;
-        transform: translateX(-50%) skewX(-10deg);
-  
-        .slides {
-          top: 0;
-          left: -25%;
-          height: 100%;
-          animation: 11s slideshow-hero -3s infinite;
-        }
-      }
+  .product-container{
+    width:100%;
+    height:100%;
+    .top{
+      height: 80%;
+      width:100%;
+      background: url(https://cdn.shopify.com/s/files/1/2010/4089/products/CryoFreeze_1000x1000.wthoutlid.jpg?v=1602007430) no-repeat center center; 
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
     }
-  
-    &--contrast {
-      z-index: 1;
-      width: 100%;
-      height: 50%;
-      transform: none;
-      
-      .slide {
-        // filter: blur(3px);
+    .bottom{
+      width: 200%;
+      height: 20%;
+      transition: transform 0.5s;
+      &.clicked{
+        transform: translateX(-50%);
       }
-  
-      &--before {
-        left: 0;
-  
-        .slides {
-          width: 100vw;
-        }
+      h5{
+          margin:0;
+          padding-left:5%;
       }
-  
-      &--after {
-        z-index: 2;
-        left: auto;
-        right: 0;
-  
-        .slides {
-          width: 100vw;
-          left: auto;
-          right: 0;
-        }
-      }
-  
-      .slides {
-        animation: 14s slideshow-contrast -5s infinite;
-      }
-  
-      .slide1 {
-        background-image: linear-gradient(to bottom, rgba(33, 228, 42, 0.25) 0, rgba(75, 200, 117, 0.5) 100%), url(https://www.rei.com/dam/vagnini_181016_2024_hiking_beginners_hero_lg.jpg);
-        // background-image: url(../img/slideshow/hero-1.jpg);
-        animation: 20s slides-set-1 -0.2s infinite;
-      }
-      .slide2 {
-        background-image: linear-gradient(to bottom, rgba(33, 228, 42, 0.25) 0, rgba(75, 200, 117, 0.5) 100%), url(https://acchamber.com/wp-content/uploads/2020/05/construction-laws.jpg);
-        // background-image: url(../img/slideshow/hero-2.jpg);
-        animation: 20s slides-set-2 -0.2s infinite;
-      }
-      .slide3 {
-        background-image: linear-gradient(to bottom, rgba(33, 228, 42, 0.25) 0, rgba(75, 200, 117, 0.5) 100%), url(https://beginwithinscottsdale.com/wp-content/uploads/2020/04/Natural-Methods-for-Neck-and-Shoulder-Pain-Relief.jpg);
-        // background-image: url(../img/slideshow/hero-3.jpg);
-        animation: 20s slides-set-3 -0.2s infinite;
-      }
-  
-      &--after {
-        top: auto;
-        bottom: 0;
-  
-        .slides {
-          animation: 13s slideshow-contrast -13s infinite;
-        }
-        .slide {
-          background-position: right;
-        }
-        .slide1 {
-          animation: 20s slides-set-1 infinite;
-        }
-        .slide2 {
-          animation: 20s slides-set-2 infinite;
-        }
-        .slide3 {
-          animation: 20s slides-set-3 infinite;
-        }
-      }
-  
-      @media (min-width: 600px) {
+      .left{
+        height:100%;
         width: 50%;
-        height: 100%;
-  
-        &--after {
-          top: 0;
-          bottom: auto;
-  
-          .slides {
-            width: 50vw;
+        background: #f4f4f4;
+        position:relative;
+        float:left;
+        .details{
+          padding: 20px;
+          float: left;
+          width: calc(70% - 40px);
+        }
+        .buy{
+          float:right;
+          width: calc(30% - 2px);
+          height:100%;
+          background: #f1f1f1;
+          transition: background 0.5s;
+          border-left:solid thin rgba(0,0,0,0.1);
+          i{
+            font-size:30px;
+            padding:30px;
+            color: #254053;
+            transition: transform 0.5s;
+          }
+          &:hover{
+            background: #A6CDDE;
+          }
+          &:hover i{
+            transform: translateY(5px);
+            color:#00394B;
+          }
+        }
+      }
+      .right{
+        width: 50%;
+        background: #A6CDDE;
+        color: white;
+        float:right;
+        height:200%;
+        overflow: hidden;
+        .details{
+          padding: 20px;
+          float: right;
+          width: calc(70% - 40px);
+        }
+        .done{
+          width: calc(30% - 2px);
+          float:left;
+          transition: transform 0.5s;
+          border-right:solid thin rgba(255,255,255,0.3);
+          height:50%;
+          i{
+            font-size:30px;
+            padding:30px;
+            color: white;
+          }
+        }
+        .remove{
+          width: calc(30% - 1px);
+          clear: both;
+          border-right:solid thin rgba(255,255,255,0.3);
+          height:50%;
+          background: $primary-color;
+          transition: transform 0.5s, background 0.5s;
+          &:hover{
+            background: $primary-color;
+          }
+          &:hover i{
+            transform: translateY(5px);
+          }
+          i{
+            transition: transform 0.5s;
+            font-size:30px;
+            padding:30px;
+            color: white;
+          }
+        }
+        &:hover{
+          .remove, .done{
+            transform: translateY(-100%);
           }
         }
       }
     }
   }
   
-  .slides,
-  .slide {
+  .inside{
+    z-index:9;
+    background: $primary-color;
+    width:140px;
+    height:140px;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  
-  @keyframes slideshow-hero-mobile {
-    0% {
-      transform: scale(1) skewY(10deg);
-    }
-    50% {
-      transform: scale(1.05) skewY(10deg);
-    }
-    100% {
-      transform: scale(1) skewY(10deg);
-    }
-  }
-  
-  @keyframes slideshow-hero {
-    0% {
-      transform: scale(1) skewX(10deg);
-    }
-    50% {
-      transform: scale(1.05) skewX(10deg);
-    }
-    100% {
-      transform: scale(1) skewX(10deg);
-    }
-  }
-  
-  @keyframes slideshow-contrast {
-    0% {
-      transform: scale(1.05);
-    }
-    50% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1.05);
-    }
-  }
-  
-  @keyframes slides-set-1 {
-    0% {
+    top: -70px;
+    right: -70px;
+    border-radius: 0px 0px 200px 200px;
+    transition: all 0.5s, border-radius 2s, top 1s;
+    overflow: hidden;
+    .icon{
+      position:absolute;
+      right:85px;
+      top:85px;
+      color:white;
       opacity: 1;
-      // transform: translateY(0);
-      transform: scale(1);
     }
-    31% {
-      opacity: 1;
-      // transform: translateY(0);
-      transform: scale(1);
+    &:hover{
+      width:100%;
+      right:0;
+      top:0;
+      border-radius: 0;
+      height:80%;
+      .icon{
+        opacity: 0;
+        right:15px;
+        top:15px;
+      }
+      .contents{
+        opacity: 1;
+        transform: scale(1);
+        transform: translateY(0);
+      }
     }
-    34% {
+    .contents{
+      padding: 5%;
       opacity: 0;
-      // transform: translateY(100px);
-      transform: scale(1.05);
-    }
-    97% {
-      opacity: 0;
-      // transform: translateY(-100px);
-      transform: scale(1.05);
-    }
-    100% {
-      opacity: 1;
-      // transform: translateY(0);
-      transform: scale(1);
+      transform: scale(0.5);
+      transform: translateY(-200%);
+      transition: opacity 0.2s, transform 0.8s;
+      table{
+        text-align:left;
+        width:100%;
+      }
+      h1, p, table{
+        color: white;
+      }
+      p{
+        font-size:13px;
+      }
     }
   }
-  @keyframes slides-set-2 {
-    0% {
-      opacity: 0;
-      // transform: translateY(-100px);
-      transform: scale(1.05);
-    }
-    31% {
-      opacity: 0;
-      // transform: translateY(-100px);
-      transform: scale(1.05);
-    }
-    34% {
-      opacity: 1;
-      // transform: translateY(0);
-      transform: scale(1);
-    }
-    64% {
-      opacity: 1;
-      // transform: translateY(0);
-      transform: scale(1);
-    }
-    67% {
-      opacity: 0;
-      // transform: translateY(100px);
-      transform: scale(1.05);
-    }
-    100% {
-      opacity: 0;
-      // transform: translateY(100px);
-      transform: scale(1.05);
-    }
-  }
-  @keyframes slides-set-3 {
-    0% {
-      opacity: 0;
-      // transform: translateY(-100px);
-      transform: scale(1.05);
-    }
-    64% {
-      opacity: 0;
-      // transform: translateY(-100px);
-      transform: scale(1.05);
-    }
-    67% {
-      opacity: 1;
-      // transform: translateY(0);
-      transform: scale(1);
-    }
-    97% {
-      opacity: 1;
-      // transform: translateY(0);
-      transform: scale(1);
-    }
-    100% {
-      opacity: 0;
-      // transform: translateY(100px);
-      transform: scale(1.05);
-    }
-  }
+}
