Layout, Header, Nav, Cart, Code Clean Up

--- a/src/css/AboutUs.scss
+++ b/src/css/AboutUs.scss
@@ -1,8 +1,9 @@
-$primary-color: rgb(73, 180, 207);
-$secondary-color: rgb(0, 60, 255);
+$primary-color: #04B2d9;
+$secondary-color: #0583F2;
+$tertiary-color: #04c4d9;
 
-$bg-color-1: white;
-$bg-color-2:#def9ff;
+$bg-color-1: rgb(255, 255, 255);
+$bg-color-2: rgb(221, 221, 221);
 :root {
   --color: #3c3163;
   --transition-time: 0.5s;
