--- a/src/css/Info.scss
+++ b/src/css/Info.scss
@@ -1,295 +1,301 @@
-$content-width: calc(40vw - 84px);
-$margin: 20px;
-$spacing: 20px;
-$bdrs: 6px;
-$circle-size: 40px;
-$icon-size: 32px;
-$bdrs-icon: 100%;
 
-$color1: #7aff85;
-$color2: #2c6d1c;
 
-$color3: #2c6d1c;
-$color4: #5dbe3f;
-
-$color5: #3bcc43;
-$color6: #2c6d1c;
-
-* {
-  box-sizing: border-box;
+@mixin mediaMaxWidth($w) {
+  @media (max-width: $w) {
+    @content;
+  }
 }
-
-h1 {
-  padding-top: 5%;
-  margin: 5%;
-  text-align: center;
-  font-weight: 100;
+svg {
+  display: block;
+  overflow: visible;
 }
-.timeline {
-  display: flex;
-  flex-direction: column;
-  margin: $margin auto;
+.slider-container {
   position: relative;
+  height: 100%;
+  user-select: none;
+  cursor: all-scroll;
+}
+.slider-control {
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  width: 12%;
+  height: 100%;
+  transition: opacity 0.3s;
+  will-change: opacity;
+  opacity: 0;
 
-  &__event {
-    margin-bottom: $spacing;
-    position: relative;
-    display: flex;
-    margin: $spacing 0;
-    border-radius: $bdrs;
-    align-self: center;
-    width: 50vw;
+  &.inactive:hover {
+    cursor: auto;
+  }
 
-    &:nth-child(2n + 1) {
-      flex-direction: row-reverse;
-      .timeline__event__date {
-        border-radius: 0 $bdrs $bdrs 0;
-      }
-      .timeline__event__content {
-        border-radius: $bdrs 0 0 $bdrs;
-      }
+  &:not(.inactive):hover {
+    opacity: 1;
+    cursor: pointer;
+  }
 
-      .timeline__event__icon {
-        &:before {
-          content: "";
-          width: 2px;
-          height: 100%;
-          background: $color2;
-          position: absolute;
-          top: 0%;
-          left: 50%;
-          right: auto;
-          z-index: -1;
-          transform: translateX(-50%);
-          animation: fillTop 2s forwards 4s ease-in-out;
-        }
-        &:after {
-          content: "";
-          width: 100%;
-          height: 2px;
-          background: $color2;
-          position: absolute;
-          right: 0;
-          z-index: -1;
-          top: 50%;
-          left: auto;
-          transform: translateY(-50%);
-          animation: fillLeft 2s forwards 4s ease-in-out;
-        }
-      }
-    }
-
-    &__title {
-      font-size: 1.2rem;
-      line-height: 1.4;
-      text-transform: uppercase;
-
-      font-weight: 600;
-      color: $color1;
-      letter-spacing: 1.5px;
-    }
-    &__content {
-      padding: $spacing;
-      box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-        0 18px 36px -18px rgba(0, 0, 0, 0.3),
-        0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-      background: #fff;
-      width: $content-width;
-      border-radius: 0 $bdrs $bdrs 0;
-    }
-    &__date {
-      color: $color2;
-      font-size: 1.5rem;
-      font-weight: 600;
-      background: $color1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      white-space: nowrap;
-      padding: 0 $spacing;
-      border-radius: $bdrs 0 0 $bdrs;
-    }
-    &__icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: $color1;
-      padding: $spacing;
-      align-self: center;
-      margin: 0 $spacing;
-      background: $color2;
-      border-radius: $bdrs-icon;
-      width: $circle-size;
-      box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-        0 18px 36px -18px rgba(0, 0, 0, 0.3),
-        0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-      padding: 40px;
-      height: $circle-size;
-      position: relative;
-
-      i {
-        font-size: $icon-size;
-      }
-
-      &:before {
-        content: "";
-        width: 2px;
-        height: 100%;
-        background: $color2;
-        position: absolute;
-        top: 0%;
-        z-index: -1;
-        left: 50%;
-        transform: translateX(-50%);
-        animation: fillTop 2s forwards 4s ease-in-out;
-      }
-      &:after {
-        content: "";
-        width: 100%;
-        height: 2px;
-        background: $color2;
-        position: absolute;
-        left: 0%;
-        z-index: -1;
-        top: 50%;
-        transform: translateY(-50%);
-        animation: fillLeftOdd 2s forwards 4s ease-in-out;
-      }
-    }
-    &__description {
-      flex-basis: 60%;
-    }
-
-    &--type2 {
-      &:after {
-        background: $color4;
-      }
-      .timeline__event__date {
-        color: $color3;
-        background: $color4;
-      }
-
-      &:nth-child(2n + 1) {
-        .timeline__event__icon {
-          &:before,
-          &:after {
-            background: $color3;
-          }
-        }
-      }
-
-      .timeline__event__icon {
-        background: $color3;
-        color: $color4;
-        &:before,
-        &:after {
-          background: $color3;
-        }
-      }
-      .timeline__event__title {
-        color: $color4;
-      }
-      .timeline__event__title {
-      }
-    }
-
-    &--type3 {
-      &:after {
-        background: $color5;
-      }
-      .timeline__event__date {
-        color: $color6;
-        background-color: $color5;
-      }
-
-      &:nth-child(2n + 1) {
-        .timeline__event__icon {
-          &:before,
-          &:after {
-            background: $color6;
-          }
-        }
-      }
-
-      .timeline__event__icon {
-        background: $color6;
-        color: $color5;
-        &:before,
-        &:after {
-          background: $color6;
-        }
-      }
-      .timeline__event__title {
-        color: $color5;
-      }
-      .timeline__event__title {
-      }
-    }
-    &:last-child {
-      .timeline__event__icon {
-        &:before {
-          content: none;
-        }
-      }
-    }
+  &.left {
+    left: 0;
+    background: linear-gradient(to right, rgba(0,0,0,0.18) 0%, rgba(0,0,0,0) 100%);
+  }
+  &.right {
+    right: 0;
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%, rgba(0,0,0,0.18) 100%);
   }
 }
 
-@media (max-width: 786px) {
-  .timeline__event {
-    flex-direction: column;
-    align-self: center;
-    &__content {
-      width: 100%;
+.slider-pagi {
+  position: absolute;
+  z-index: 3;
+  left: 50%;
+  bottom: 2rem;
+  transform: translateX(-50%);
+  font-size: 0;
+  list-style-type: none;
+  
+  &__elem {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    width: 2rem;
+    height: 2rem;
+    margin: 0 0.5rem;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    cursor: pointer;
+    
+    &:before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 1.2rem;
+      height: 1.2rem;
+      background: #fff;
+      border-radius: 50%;
+      transition: transform 0.3s;
+      transform: translate(-50%, -50%) scale(0);
+    }
+    
+    &.active:before,
+    &:hover:before {
+      transform: translate(-50%, -50%) scale(1);
+    }
+  }
+}
+.slider {
+  z-index: 1;
+  position: relative;
+  height: 100%;
+
+  &.animating {
+    transition: transform 0.5s;
+    will-change: transform;
+
+    .slide__bg {
+      transition: transform 0.5s;
+      will-change: transform;
+    }
+  }
+}
+.slide {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  &.active {
+
+    .slide__overlay,
+    .slide__text{
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: -50%;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    will-change: transform;
+  }
+  &:nth-child(1) {
+    left: 0;
+
+    .slide__bg {
+      left: 0;
+      background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-3.jpg');
     }
 
-    &__icon {
-      border-radius: $bdrs $bdrs 0 0;
-      width: 100%;
-      margin: 0;
-      box-shadow: none;
+    .slide__overlay-path {
+      fill: rgb(233, 156, 126);
+    }
 
-      &:before,
-      &:after {
+    @include mediaMaxWidth(991px) {
+      .slide__text {
+        background-color: rgba(233, 156, 126, 0.8);
+      } 
+    }
+  }
+  &:nth-child(2) {
+    left: 100%;
+
+    .slide__bg {
+      left: -50%;
+      background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-2.jpg');
+    }
+
+    .slide__overlay-path {
+      fill: rgb(225, 204, 174);
+    }
+
+    @include mediaMaxWidth(991px) {
+      .slide__text {
+        background-color: rgba(225, 204, 174, 0.8);
+      } 
+    }
+  }
+  &:nth-child(3) {
+    left: 200%;
+
+    .slide__bg {
+      left: -100%;
+      background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-1.jpg');
+    }
+
+    .slide__overlay-path {
+      fill: rgb(173, 197, 205);
+    }
+
+    @include mediaMaxWidth(991px) {
+      .slide__text {
+        background-color: rgba(173, 197, 205, 0.8);
+      } 
+    }
+  }
+  &:nth-child(4) {
+    left: 300%;
+
+    .slide__bg {
+      left: -150%;
+      background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-4.jpg');
+    }
+
+    .slide__overlay-path {
+      fill: rgb(203, 198, 195);
+    }
+
+    @include mediaMaxWidth(991px) {
+      .slide__text {
+        background-color: rgba(203, 198, 195, 0.8);
+      } 
+    }
+  }
+
+  &__content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    min-height: 810px;
+    transition: transform 0.5s 0.5s, opacity 0.2s 0.5s;
+    will-change: transform, opacity;
+    transform: translate3d(-20%, 0, 0);
+    opacity: 0;
+
+    @include mediaMaxWidth(991px) {
+      display: none;
+    }
+
+    path {
+      opacity: 0.8;
+    }
+  }
+
+  &__text {
+    position: absolute;
+    width: 25%;
+    bottom: 15%;
+    left: 12%;
+    color: #fff;
+    transition: transform 0.5s 0.8s, opacity 0.5s 0.8s;
+    will-change: transform, opacity;
+    transform: translateY(-50%);
+    opacity: 0;
+
+    @include mediaMaxWidth(991px) {
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 20rem;
+      text-align: center;
+      transform: translateY(50%);
+      transition: transform 0.5s 0.5s, opacity 0.5s 0.5s;
+      padding: 0 1rem;
+    }
+
+    &-heading {
+      font-size: 5rem;
+      margin-bottom: 2rem;
+      
+      @include mediaMaxWidth(991px) {
+        line-height: 20rem;
+        font-size: 3.5rem;
+      }
+    }
+
+    &-desc {
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+
+      @include mediaMaxWidth(991px) {
         display: none;
       }
     }
-    &__date {
-      border-radius: 0;
-      padding: $spacing;
-    }
 
-    &:nth-child(2n + 1) {
-      flex-direction: column;
-      align-self: center;
-
-      .timeline__event__date {
-        border-radius: 0;
-        padding: $spacing;
+    &-link {
+      z-index: 5;
+      display: inline-block;
+      position: relative;
+      padding: 0.5rem;
+      cursor: pointer;
+      font-size: 2.3rem;
+      perspective: 1000px;
+      
+      @include mediaMaxWidth(991px) {
+        display: none;
       }
 
-      .timeline__event__icon {
-        border-radius: $bdrs $bdrs 0 0;
-        margin: 0;
+      &:before {
+        z-index: -1;
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        transform-origin: 50% 100%;
+        transform: rotateX(-85deg);
+        transition: transform 0.3s;
+        will-change: transform;
+      }
+
+      &:hover:before {
+        transform: rotateX(0);
       }
     }
-  }
-}
-
-@keyframes fillLeft {
-  100% {
-    right: 100%;
-  }
-}
-
-@keyframes fillTop {
-  100% {
-    top: 100%;
-  }
-}
-
-@keyframes fillLeftOdd {
-  100% {
-    left: 100%;
   }
 }
