--- a/src/css/Store.scss
+++ b/src/css/Store.scss
@@ -1,8 +1,19 @@
-$primary-color: rgb(73, 180, 207);
-$secondary-color: rgb(0, 60, 255);
+$primary-color: #04B2d9;
+$secondary-color: #0583F2;
+$tertiary-color: #04c4d9;
 
-$bg-color-1: white;
-$bg-color-2:#def9ff;
+$bg-color-1: rgb(255, 255, 255);
+$bg-color-2: rgb(221, 221, 221);
+
+
+
+.store-header {
+  background: gray;
+}
+
+.divider-lower {
+  padding-top: 2%;
+}
 
 .product-wrapper{
   width: 300px;
@@ -64,15 +75,15 @@ $bg-color-2:#def9ff;
           i{
             font-size:30px;
             padding:30px;
-            color: #254053;
+            color: gray;
             transition: transform 0.5s;
           }
           &:hover{
-            background: #A6CDDE;
+            background: gray;
           }
           &:hover i{
             transform: translateY(5px);
-            color:#00394B;
+            color:gray;
           }
         }
       }
@@ -100,26 +111,6 @@ $bg-color-2:#def9ff;
             color: white;
           }
         }
-        .remove{
-          width: calc(30% - 1px);
-          clear: both;
-          border-right:solid thin rgba(255,255,255,0.3);
-          height:50%;
-          background: $primary-color;
-          transition: transform 0.5s, background 0.5s;
-          &:hover{
-            background: $primary-color;
-          }
-          &:hover i{
-            transform: translateY(5px);
-          }
-          i{
-            transition: transform 0.5s;
-            font-size:30px;
-            padding:30px;
-            color: white;
-          }
-        }
         &:hover{
           .remove, .done{
             transform: translateY(-100%);
@@ -131,7 +122,7 @@ $bg-color-2:#def9ff;
   
   .inside{
     z-index:9;
-    background: $primary-color;
+    background: gray;
     width:140px;
     height:140px;
     position: absolute;
@@ -182,4 +173,112 @@ $bg-color-2:#def9ff;
       }
     }
   }
+}
+
+
+$bg: #f3f8fa;
+$white: #fff;
+
+@mixin transition($property: all, $duration: 0.45s, $ease: cubic-bezier(0.65,0,.076,1)) {
+  transition: $property $duration $ease;
+}
+
+* {
+  box-sizing: border-box;
+  &::before, &::after {
+    box-sizing: border-box;
+  }
+}
+
+.products-container button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+  &.learn-more {
+    width: 12rem;
+    height: auto;
+    .circle {
+      @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
+      position: relative;
+      display: block;
+      margin: 0;
+      width: 3rem;
+      height: 3rem;
+      background: grey;
+      border-radius: 1.625rem;
+      .icon {
+        @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        background: $white;
+        &.arrow {
+          @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
+          left: 0.625rem;
+          width: 1.125rem;
+          height: 0.125rem;
+          background: none;
+          &::before {
+            position: absolute;
+            content: '';
+            top: -0.25rem;
+            right: 0.0625rem;
+            width: 0.625rem;
+            height: 0.625rem;
+            border-top: 0.125rem solid #fff;
+            border-right: 0.125rem solid #fff;
+            transform: rotate(45deg);
+          }
+        }
+      }
+    }
+    .button-text {
+      @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      padding: 0.75rem 0;
+      margin: 0 0 0 1.85rem;
+      color: grey;
+      font-weight: 700;
+      line-height: 1.6;
+      text-align: center;
+      text-transform: uppercase;
+    }
+  }
+  &:hover {
+    .circle {
+      width: 100%;
+      .icon {
+        &.arrow {
+        background: $white;
+        transform: translate(1rem, 0);
+        }
+      }
+    }
+    .button-text {
+      color: $white;
+    }
+  }
+}
+
+
+.cart-icon {
+  color: black;
+  background-color: white;
+}
+
+.grey {
+  background-color: gray;
 }
