--- a/src/css/AboutUs.scss
+++ b/src/css/AboutUs.scss
@@ -1,9 +1,17 @@
-$primary-color: #04B2d9;
-$secondary-color: #0583F2;
-$tertiary-color: #04c4d9;
+$primary-color: #05C7F2;
+$secondary-color: #262A73;
+$tertiary-color: #2E3F8E;
+$accent-color: #1E2159;
 
-$bg-color-1: rgb(255, 255, 255);
+$primary-mint-color: #05C7F2;
+$secondary-mint-color: #0FA644;
+$tertiary-mint-color: #3365A6;
+$accent-mint-color: #03A688;
+
+$bg-color-1: #F2F2F2;
 $bg-color-2: rgb(221, 221, 221);
+
+
 :root {
   --color: #3c3163;
   --transition-time: 0.5s;
