Font, Center Fix Hopefully

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -22,7 +22,7 @@ html {
   box-sizing: border-box;
   letter-spacing: 1.1px;
   overflow-x: hidden;
-  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 
 .body {
