--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -110,10 +110,9 @@ $bg-color-2: rgb(221, 221, 221);
 
 
 .home-card-container {
-    background: linear-gradient(0.25turn, $tertiary-color,$primary-color, $secondary-color);;
+    background: linear-gradient(0.25turn, $tertiary-color,$secondary-mint-color, $secondary-color);;
     padding-bottom: 5%;
     padding-top: 5%;
-    margin-top: 5%;
 }
 
  .home-card {
@@ -196,31 +195,31 @@ $bg-color-2: rgb(221, 221, 221);
  
   }
 
+  .square-brackets-quote {
+    blockquote {
+      padding-top: 5%;
+      border:solid 1em #ccc;
+      &:before {
+        content: "";
+      }
+      cite {
+        color:#757575;
+      }
+      > * {
+        position: relative;
+        z-index: 1;
+      }
+    }
+  }
+
   .author {
       color: black;
   }
 
-  .featurette-divider {
-    margin: 80px 0;
-  }
-  
-  .featurette-heading {
-    font-weight: 300;
-    line-height: 1;
-    text-align: center;
-  }
-  
-  .featurette-image {
-    border-radius: 8%;
-    width: 100%;
-    height: 100%;
-  }
 
   .call-for-action{
     background: rgb(182, 182, 182);
-    align-items: center;
     text-align: center;
-    justify-content: center;
   }
 
   .call-for-action img {
@@ -229,5 +228,5 @@ $bg-color-2: rgb(221, 221, 221);
   }
 
   .call-text {
-    margin-top: 10%;
+    margin-top: 8%;
   }
