--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -102,15 +102,9 @@ $bg-color-2: rgb(221, 221, 221);
     margin-bottom: 10%;
 }
 
-.container-fluid {
-    padding-left: 0%;
-    padding-right: 0%;
-}
-
-
 
 .home-card-container {
-    background: linear-gradient(0.25turn, $tertiary-color,$secondary-color, $secondary-color);;
+    background: linear-gradient(0.25turn, $tertiary-color,$secondary-color, $secondary-color);
     padding-bottom: 5%;
     padding-top: 5%;
 }
@@ -190,13 +184,14 @@ $bg-color-2: rgb(221, 221, 221);
  .quote-container {
 
     margin-top: 5%;
+    margin-bottom: 5%;
     align-items: center;
     text-align: center;
  
   }
 
   .square-brackets-quote {
-    blockquote {
+    
       padding-top: 5%;
       border:solid 1em #ccc;
       &:before {
@@ -209,24 +204,170 @@ $bg-color-2: rgb(221, 221, 221);
         position: relative;
         z-index: 1;
       }
-    }
+    
   }
 
   .author {
       color: black;
   }
 
-
-  .call-for-action{
-    background: rgb(182, 182, 182);
+  .quote-wrapper {
+    width: 20vw;
+    height: auto;
+    position: relative;
+  }
+  
+  .text {
+    width: 100%;
+    height: 100%;
+    /*BLUE BG*/
+    background: radial-gradient(
+      ellipse at center,
+      $secondary-color 0%,
+      $tertiary-color 70%,
+      rgba(0, 128, 172, 0) 70.3%
+    );
+    position: relative;
+    margin: 0;
+    color: white;
+  }
+  
+  .text p {
+    height: 100%;
+    font-size: 21px;
+    line-height: 1.25;
+    padding: 0;
     text-align: center;
+    font-style: italic;
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
+  }
+  
+  .text::before {
+    content: "";
+    width: 50%;
+    height: 100%;
+    float: left;
+    shape-outside: polygon(
+      0 0,
+      98% 0,
+      50% 6%,
+      23.4% 17.3%,
+      6% 32.6%,
+      0 50%,
+      6% 65.6%,
+      23.4% 82.7%,
+      50% 94%,
+      98% 100%,
+      0 100%
+    );
+    shape-margin: 7%;
+  }
+  
+  .text p::before {
+    content: "";
+    width: 50%;
+    height: 100%;
+    float: right;
+    shape-outside: polygon(
+      2% 0%,
+      100% 0%,
+      100% 100%,
+      2% 100%,
+      50% 94%,
+      76.6% 82.7%,
+      94% 65.6%,
+      100% 50%,
+      94% 32.6%,
+      76.6% 17.3%,
+      50% 6%
+    );
+    shape-margin: 7%;
+  }
+  
+  .quote-wrapper blockquote footer {
+    width: 100%;
+    position: absolute;
+    font-size: 17px;
+    text-align: center;
+    font-style: italic;
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
+  }
+  
+  .quote-wrapper::before {
+    content: "\201C";
+    font-size: 270px;
+    height: 82px;
+    line-height: 0.78;
+    line-height: 1;
+    position: absolute;
+    top: -48px;
+    left: 0;
+    z-index: 1;
+    font-family: sans-serif, serif;
+    color: #ccc;
+    opacity: 0.9;
+  }
+  
+  @media (min-width: 850px) {
+    .quote-wrapper {
+      width: 370px;
+      height: 370px;
+    }
+  
+    .quote-wrapper::before {
+      font-size: 300px;
+    }
+  
+    .text p {
+      font-size: 26px;
+    }
+  
+    .quote-wrapper blockquote footer {
+      bottom: 32px;
+    }
   }
 
-  .call-for-action img {
-    width: 90%;
+  
+
+  .quote-container img {
+    width: 100%;
     height: auto;
   }
 
-  .call-text {
-    margin-top: 8%;
+  .image-container {
+    display: flex;
+    width: 100%;
+    padding: 4% 2%;
+    box-sizing: border-box;
+    height: 100vh;
+  }
+  
+  .box {
+    flex: 1;
+    overflow: hidden;
+    transition: .5s;
+    margin: 0 2%;
+    box-shadow: 0 20px 30px rgba(0,0,0,.1);
+    line-height: 0;
+  }
+  
+  .box > img {
+    width: 200%;
+    height: calc(100% - 10vh);
+    object-fit: cover; 
+    transition: .5s;
+  }
+  
+  .box > span {
+    font-size: 3.8vh;
+    display: block;
+    text-align: center;
+    height: 10vh;
+    line-height: 2.6;
+  }
+  
+  .box:hover { flex: 1 1 50%; }
+  .box:hover > img {
+    width: 100%;
+    height: 100%;
   }
